<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.yamltobot</groupId>
	<artifactId>yamltobot</artifactId>
	<version>3.0.0-PRE</version>
	<name>YAML to Bot</name>
	<description>Create a bot from the given YAML file.</description>
	<packaging>pom</packaging>
	<modules>
		<module>core</module>
		<module>discord</module>
		<module>twitch</module>
	</modules>
  	<build>
  		<defaultGoal>clean compile package install shade:shade</defaultGoal>
	  	<!--<resources>
	  	  	<resource>
	  	  		<directory>src/main/resources</directory>
	  	  	</resource>
	  	</resources>-->
	  	<plugins>
	  		<plugin>
	  			<groupId>org.apache.maven.plugins</groupId>
	  			<artifactId>maven-shade-plugin</artifactId>
	  			<version>3.1.1</version>
	  		</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
	  		<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
						</manifest>
					</archive>
				</configuration>
			</plugin>
	  	</plugins>
	</build>
</project>